升级表结构
